[package]
name = "holocene_calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-file = { version = "0.2.3", features = ["futures"] }
js-sys = "0.3.60"
yew = "0.20.0"
yew-hooks = "0.2.0"
wasm-logger = "0.2.0"
log = "0.4.17"

[dependencies.web-sys]
version = "0.3"
features = ["File"]
